syntax = "proto3";

package greet;
option go_package="./greetpb";

message Greeting {
    int64 juego = 1;
    string nombreJuego = 2;
    int64 jugadores = 3;
}

message GreetRequest {
    Greeting greeting = 1;
}

message GreetResponse {
    string result = 1;
}

service GreetService{
    // Unary API
    rpc Greet(GreetRequest) returns (GreetResponse) {};
}



// protoc greet.proto --go_out=plugins=grpc:.



/*
$ go get -d google.golang.org/protobuf/cmd/protoc-gen-go@v1.26
$ go get -d google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.1
$ go get -d google.golang.org/grpc
*/

// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative greet.proto